syntax = "proto3";

package go_atomos;
option go_package = "github.com/hwangtou/go-atomos";